--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "permissionCode"]
 	path = permissionCode
 	url = https://github.com/Hyperyun/permissionCode
+[submodule "commander"]
+	path = commander
+	url = https://github.com/Hyperyun/commander.git
